--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^12.6.0",
     "date-fns": "^2.16.1",
     "react": "^17.0.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "use-places-autocomplete": "^1.7.0",
